package com.project;

public enum AvailableStatus {
    AVAILABLE,
    OCCUPIED
}
